--- a/data_treatment/get_results.ipynb
+++ b/data_treatment/get_results.ipynb
@@ -52,13 +52,7 @@
     "            df = df[df.cwrb_reference_soil_group != u]\n",
     "            print('Deleting {} with {} occurrences'.format(u, cnt))\n",
     "\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def remove_outliers(data):\n",
-    "    print(f'Removing {data[data.lower_depth_4 > 15].shape[0]} outliers')\n",
-    "    data = data[data.lower_depth_4 < 15]\n",
-    "    return data\n"
+    "    return df\n"
    ]
   },
   {
